fixed extra space under images

--- a/style.css
+++ b/style.css
@@ -20,8 +20,13 @@ body {
     font-size: 1rem;
 }
 
+.header, .main, .footer {
+    width: 80%;
+    margin: 0 auto;
+}
+
 section {
-    padding: 1.5rem;
+    padding: 1.5rem 0;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -31,7 +36,7 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
 }
 
 .logo {
@@ -97,7 +102,6 @@ section {
 }
 
 .card {
-    height: fit-content;
     width: 30%;
     position: relative;
     overflow: hidden;
@@ -109,13 +113,14 @@ section {
 }
 
 .card img {
+    display:block;
     width: 100%;
 }
 
 .card__description {
     padding: 1rem;
     position:absolute;
-    bottom: 4px;
+    bottom: 0;
     right: 0;
     left: 0;
     transform: translateY(100%);
